<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".Login.correologin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="24dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="204dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/loginlogo" />

        <!-- Email -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/Txt_login"
            android:textSize="32sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp">

            <EditText
                android:id="@+id/Et_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Et_email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/Et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Et_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Botón Ingresar -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/Btn_ingresar"
            android:layout_width="269dp"
            android:layout_height="@dimen/m_button_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@string/Btn_ingresar"
            android:textAllCaps="true"
            android:backgroundTint="@color/Blue_principal"/>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:dividerInsetStart="16dp"
            app:dividerInsetEnd="16dp"/>

        <!-- Botón Ingresar con Google -->

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/Btn_ingresar_google"
            android:layout_width="272dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"
            android:text="@string/Btn_ingresar_google"
            app:icon="@drawable/ic_logologingoogle"
            android:backgroundTint="@color/material_dynamic_neutral_variant99"/>


        <!-- Espaciador para otros elementos -->

        <TextView
            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:text="@string/Txt_no_cuenta" />

        <TextView
            android:id="@+id/Txt_registrarme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/Txt_registrarme"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>