<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".Login.registrocorreo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="24dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="204dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/registrologin" />

        <!-- Título Registro -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/Txt_registrarme"
            android:textSize="32sp"
            android:textStyle="bold" />

        <!-- Primer apellido -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxStrokeColor="@color/Blue_principal"
            app:boxStrokeWidth="2dp"
            app:endIconMode="clear_text"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Et_primerapellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Et_primerapellido"
                android:inputType="textCapWords"
                android:textColor="@color/black"
                android:textSize="16sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Segundo apellido -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxStrokeColor="@color/Blue_principal"
            app:boxStrokeWidth="2dp"
            app:endIconMode="clear_text"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Et_segundoapellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Et_segundoapellido"
                android:inputType="textCapWords"
                android:textColor="@color/black"
                android:textSize="16sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Nombre -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxStrokeColor="@color/Blue_principal"
            app:boxStrokeWidth="2dp"
            app:endIconMode="clear_text"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Et_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Et_nombre"
                android:inputType="textCapWords"
                android:textColor="@color/black"
                android:textSize="16sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Teléfono -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxStrokeColor="@color/Blue_principal"
            app:boxStrokeWidth="2dp"
            app:endIconMode="clear_text"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Et_telefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Et_telefono"
                android:inputType="phone"
                android:textColor="@color/black"
                android:textSize="16sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Código Postal -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxStrokeColor="@color/Blue_principal"
            app:boxStrokeWidth="2dp"
            app:endIconMode="clear_text"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Et_cp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Et_cp"
                android:inputType="number"
                android:textColor="@color/black"
                android:textSize="16sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Email -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxStrokeColor="@color/Blue_principal"
            app:boxStrokeWidth="2dp"
            app:endIconMode="clear_text"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Et_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Et_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textSize="16sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Contraseña -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxStrokeColor="@color/Blue_principal"
            app:boxStrokeWidth="2dp"
            app:endIconMode="password_toggle"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Et_password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="16sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Repetir Contraseña -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxStrokeColor="@color/Blue_principal"
            app:boxStrokeWidth="2dp"
            app:endIconMode="password_toggle"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Et_r_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Et_r_password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="16sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Eres mayor de 18 años"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginEnd="16dp"
                android:layout_gravity="center_vertical"/>


            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_mayor_edad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:thumbTint="@color/Blue_principal"
            android:trackTint="@color/Gray"
            android:textOn="Sí"
            android:textOff="No"
            android:textColor="@color/Black" />

        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Txt_terminos" />

            <TextView
                android:id="@+id/Txt_terminos2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:textColor="@color/Blue_principal"
                android:text="@string/Txt_terminos2"
                android:textStyle="bold" />
        </LinearLayout>




        <!-- Botón Registrar -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/Btnregistrar"
            android:layout_width="269dp"
            android:layout_height="@dimen/m_button_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@string/Btn_registrar"
            android:textAllCaps="true"
            android:backgroundTint="@color/Blue_principal"/>

    </LinearLayout>
</ScrollView>
